fix padding in home page on mobile

--- a/client/src/components/pages/homePage.scss
+++ b/client/src/components/pages/homePage.scss
@@ -18,6 +18,7 @@
 
     @media screen and (max-width: 1200px) {
       margin-right: 0;
+      padding: 0;
     }
 
     .title-wrapper {
